# tashu

./: .env.example  .gitignore  README.md  pyproject.toml
Hosu/: README.md  __init__.py  build_adjacency.py  build_adjacency_directed.py  build_tensor.py  build_tensor_stage2.py  build_windows.py  eval_confusion.py  eval_mtgnn.py  model.py  model_mtgnn.py  precompute_bikes.py  preprocess.py  scan_radius.py  snapshot_engine.py  train.py  train_mtgnn.py  util_chk_lifespan.py  weather.py
Hosu/processed/: X_global.npy  a3tgcn_v2.pt  adjacency.npy  adjacency_directed.npy  bike_features.parquet  flow.npy  flow_mean_n.npy  flow_std_n.npy  mask.npy  mtgnn.pt  netflow.parquet  node_index.csv  norm_stats.json  od_matrix.parquet  snapshot_2026-03-17_C.json  station_master.csv  test_X_global.npy  test_X_node.npy  test_y.npy  test_ymask.npy  timeline.csv  train_X_global.npy  (+3 more)
app/: __init__.py  auth.py  auth_models.py  core_model.py  main.py  models.py  operations.py  operations_models.py  planner.py  tashu.py  test_panel.html  test_scenario.py  tmap.py  travel.py
docs/: PLAN.md  PLAN_AI.md  README.md  TEAM_GUIDE.md
examples/: plan_request.json
scripts/: run_csv_e2e.py  verify_test_panel_http.ps1  verify_test_panel_js.mjs
tests/: auth_helpers.py  conftest.py  test_api.py  test_core_scenario.py  test_operations_api.py  test_planner.py  test_platform_api.py  test_scenario_api.py  test_tashu.py  test_tmap.py
자전거 앱 로딩 및 지도 UI/: .env.example  App.tsx  README.md  app.json  package-lock.json  package.json
자전거 앱 로딩 및 지도 UI (1)/: .thumbnail  RideGo.dc.html  daejeon-map.html
(+47 files in other folders)
