[project]
name = "tashu-rebalancing-server"
version = "0.8.0"
description = "Multi-driver bike rebalancing API for Daejeon Tashu"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.10,<3",
  "qrcode>=8,<9",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "pytest-asyncio>=0.23,<2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
